Fieldweights Gravity doesn't work with Mantaflow Liquid #74642

Closed
opened 2020-03-11 09:30:04 +01:00 by Peter Keis · 10 comments

System Information
Operating system: Windows-10-10.0.17763-SP0 64 Bits
Graphics card: Intel(R) HD Graphics 630 Intel 4.5.0 - Build 25.20.100.6472

Blender Version
Broken: version: 2.83 (sub 7), branch: master, commit date: 2020-03-10 12:11, hash: 85cdf9a1b9
Worked: Never

Short description of error
Sliding the gravity slider all the wy to zero doesn't effect the simulation.

Exact steps for others to reproduce the error
#74642.blend

Open a fresh Blender scene and delete everything. Add a sphere. With sphere selected choose "objects"->"quick effects"->"quick liquid".
In the physics properties go down to field weights and set the gravity slider to zero.
Bake the data and the mesh (if you like to).
Fluid is falling down to the "ground" allthough gravity has to have no influence to the simulation.

**System Information** Operating system: Windows-10-10.0.17763-SP0 64 Bits Graphics card: Intel(R) HD Graphics 630 Intel 4.5.0 - Build 25.20.100.6472 **Blender Version** Broken: version: 2.83 (sub 7), branch: master, commit date: 2020-03-10 12:11, hash: `85cdf9a1b9` Worked: Never **Short description of error** Sliding the gravity slider all the wy to zero doesn't effect the simulation. **Exact steps for others to reproduce the error** [#74642.blend](https://archive.blender.org/developer/F8411992/T74642.blend) Open a fresh Blender scene and delete everything. Add a sphere. With sphere selected choose "objects"->"quick effects"->"quick liquid". In the physics properties go down to field weights and set the gravity slider to zero. Bake the data and the mesh (if you like to). Fluid is falling down to the "ground" allthough gravity has to have no influence to the simulation.
Author

Added subscriber: @BlenderPete

Added subscriber: @BlenderPete
Member

Added subscriber: @ankitm

Added subscriber: @ankitm
Member

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'
Member

there are some reports about this.. please check if it is similar to one of :

https://developer.blender.org/T73680
https://developer.blender.org/T73474
https://developer.blender.org/T72949

It would help if you also provide a simple blend file.

there are some reports about this.. please check if it is similar to one of : https://developer.blender.org/T73680 https://developer.blender.org/T73474 https://developer.blender.org/T72949 It would help if you also provide a simple blend file.
Author

#73680 is not using scene gravity (scene properties -> no checkmark at "gravity") but using the gravity settings inside Mantaflow. Also it says that using this property the gravity is 10 times stronger...
#73474 is a bug report concerning real word size setting...
#72949 mentions the initial velocity not to be used by the Mantaflow emission object...

Maybe all bug reports refer to the same basic problem, but each report describes a different but incorrect behavior of Mantaflow.

I also provided a .blend. Please open it and bake the data (not provided).

MantaflowNoGravityBug.blend

#73680 is not using scene gravity (scene properties -> no checkmark at "gravity") but using the gravity settings inside Mantaflow. Also it says that using this property the gravity is 10 times stronger... #73474 is a bug report concerning real word size setting... #72949 mentions the initial velocity not to be used by the Mantaflow emission object... Maybe all bug reports refer to the same basic problem, but each report describes a different but incorrect behavior of Mantaflow. I also provided a .blend. Please open it and bake the data (not provided). [MantaflowNoGravityBug.blend](https://archive.blender.org/developer/F8400652/MantaflowNoGravityBug.blend)
Member

Changed status from 'Needs User Info' to: 'Needs Triage'

Changed status from 'Needs User Info' to: 'Needs Triage'
Member

The report seems correct. scene gravity is working as expected, but global property is always downwards despite changing slider values. https://docs.blender.org/manual/en/latest/physics/forces/gravity.html says

Changing this value would simulate a lower or higher force of gravity. Gravity denoted g, measurement m × s-2.

The report seems correct. scene gravity is working as expected, but global property is always downwards despite changing slider values. https://docs.blender.org/manual/en/latest/physics/forces/gravity.html says > Changing this value would simulate a lower or higher force of gravity. Gravity denoted g, measurement m × s-2.

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This issue was referenced by 31bd8e6bf3

This issue was referenced by 31bd8e6bf3aeecf7968249c7b7e832fc639a52d5
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Jacques Lucke self-assigned this 2020-03-27 12:41:41 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#74642
No description provided.