Fix T74642: Take gravity field weight into account

Reviewers: sebbas

Differential Revision: https://developer.blender.org/D7227